<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Dialer!</string>
    <string name="app_name">Dialer2</string>
	<string name="unknown">Unknown</string>
	<string name="not_contacted">not contacted</string>
	<string name="contact_has_no_phone_number">Contact has no phone number</string>
	<string name="call_log">Call Log</string>
	<string name="contact_list">Contact list</string>
	<string name="set_speed_dial">Set speed dial</string>
	<string name="not_set">Not set</string>
	<string name="show_dialer">Show dialer</string>
	<string name="hide_dialer">Hide dialer</string>
	<string name="settings">Settings</string>
	<string name="clear_call_log">Clear call log</string>
	<string name="are_you_sure_you_want_to_clear_the_call_log">Are you sure you want to clear the call log</string>
	<string name="user_interface">User interface</string>
	<string name="transparent_dialer">Transparent dialer</string>
	<string name="dialer_is_transparent">Dialer is transparent</string>
	<string name="dialer_is_not_transparent">Dialer is not transparent</string>
	<string name="vibration_length">Vibration length</string>
	<string name="length_of_the_key_click_vibration">Length of the key click vibration</string>
	<string name="behavior_settings">Behavior settings</string>
	<string name="sensor_rotation">Sensor rotation</string>
	<string name="use_sensor_based_rotation">Use sensor-based rotation</string>
	<string name="do_not_use_sensor_based_rotation">Do not use sensor-based rotation</string>
	<string name="sync_settings">Sync settings</string>
	<string name="t9_lookup_settings">T9 lookup settings</string>
	<string name="match_start_of_names">Match start of names</string>
	<string name="t9_lookup_only_matches_at_the_start_of_a_name">T9 lookup only matches at the start of a name</string>
	<string name="t9_lookup_matches_in_the_middle_of_a_name">T9 lookup matches in the middle of a name</string>
	<string name="show_call_counter">Show call counter</string>
	<string name="call_counter_visible_in_contact_list_always_0_in_htc_sense_roms">Call counter visible in contact list (always 0 in HTC Sense roms)</string>
	<string name="call_counter_hidden_in_contact_list">Call counter hidden in contact list</string>
	<string name="sort_by_times_contacted">Sort by times contacted</string>
	<string name="t9_lookup_sorts_contacts_based_on_times_contacted">T9 lookup sorts contacts based on times contacted</string>
    <string name="t9_lookup_sorts_contacts_in_alphabetical_order">T9 lookup sorts contacts in alphabetical order</string>
    <string name="favorite_contacts_first">Favorite contacts first</string>
	<string name="favorite_contacts_shown_first_in_contact_list">Favorite contacts shown first in contact list</string>
	<string name="match_phone_numbers">Match phone numbers</string>
	<string name="t9_lookup_matches_phone_numbers_and_names">T9 lookup matches phone numbers and names</string>
	<string name="t9_lookup_only_matches_names">T9 lookup only matches names</string>
</resources>
