<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_item_contact_list"
    	  android:icon="@drawable/ic_menu_allfriends"
    	  android:title="@string/contact_list" />
   	<item android:id="@+id/menu_item_call_log"
   		  android:icon="@drawable/ic_menu_call"
   		  android:title="@string/call_log" />
    <item android:id="@+id/menu_item_show_hide"
          android:icon="@drawable/ic_menu_view"
          android:title="@string/hide_dialer" />
   	<item android:id="@+id/menu_item_clear_call_log"
   		  android:icon="@drawable/ic_menu_close_clear_cancel"
   		  android:title="@string/clear_call_log" />
    <item android:id="@+id/menu_item_settings"
          android:icon="@drawable/ic_menu_preferences"
          android:title="@string/settings" />
</menu>